apiserver.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: default
  name: apiserver-egress
spec:
  podSelector:
    matchLabels:
      allow-apiserver-egress: "true"
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 443
    to:
    - ipBlock:
        cidr: 172.20.32.0/19
    - ipBlock:
        cidr: 172.20.64.0/19
    - ipBlock:
        cidr: 172.20.96.0/19
