deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: default
  name: deny-all
spec:
  podSelector:
    matchLabels: {}
  policyTypes:
  - Ingress
  - Egress
