internet.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: internet
  namespace: default
spec:
  podSelector:
    matchLabels:
      allow-internet-egress: "true"
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 0.0.0.0/0
        except:
        # From https://en.wikipedia.org/wiki/Reserved_IP_addresses
        # Software Current network[3] (only valid as source address).
        - 0.0.0.0/8
        # Private network Used for local communications within a private network.[4]
        - 10.0.0.0/8
        # Private network Shared address space[5] for communications between a service provider and its subscribers when using a carrier-grade NAT.
        - 100.64.0.0/10
        # Host Used for loopback addresses to the local host.[3]
        - 127.0.0.0/8
        # Subnet Used for link-local addresses[6] between two hosts on a single link when no IP address is otherwise specified, such as would have normally been retrieved from a DHCP server.
        - 169.254.0.0/16
        # Private network Used for local communications within a private network.[4]
        - 172.16.0.0/12
        # Private network IETF Protocol Assignments.[3]
        - 192.0.0.0/24
        # Documentation Assigned as TEST-NET-1, documentation and examples.[7]
        - 192.0.2.0/24
        # Internet Reserved.[8] Formerly used for IPv6 to IPv4 relay[9] (included IPv6 address block 2002::/16).
        - 192.88.99.0/24
        # Private network Used for local communications within a private network.[4]
        - 192.168.0.0/16
        # Private network Used for benchmark testing of inter-network communications between two separate subnets.[10]
        - 198.18.0.0/15
        # Documentation Assigned as TEST-NET-2, documentation and examples.[7]
        - 198.51.100.0/24
        # Documentation Assigned as TEST-NET-3, documentation and examples.[7]
        - 203.0.113.0/24
        # Internet In use for IP multicast.[11] (Former Class D network).
        - 224.0.0.0/4
        # Internet Reserved for future use.[12] (Former Class E network).
        - 240.0.0.0/4
        # Reserved for the "limited broadcast" destination address.[3][13]
        - 255.255.255.255/32
