node-exporter.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: metrics
  name: node-exporter
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/component: server
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: 9100
    to:
    - ipBlock:
        cidr: 172.20.32.0/19
    - ipBlock:
        cidr: 172.20.64.0/19
    - ipBlock:
        cidr: 172.20.96.0/19
