prometheus.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: metrics
  name: prometheus
  labels:
    app.kubernetes.io/name: prometheus
    app.kubernetes.io/component: server
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/component: server
  policyTypes:
  - Egress
  egress:
  - ports:
    - port: metrics
    to:
    - namespaceSelector:
        matchExpressions:
        - key: name
          operator: Exists
      podSelector:
        matchLabels: {}
