traefik.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: traefik
  name: traefik
  labels:
    app.kubernetes.io/name: traefik
    app.kubernetes.io/component: traefik
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: traefik
      app.kubernetes.io/component: traefik
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - ports:
    - port: http
    - port: https
    from:
    - ipBlock:
        cidr: 0.0.0.0/0
  egress:
  - ports:
    - port: web
    to:
    - namespaceSelector:
        matchExpressions:
        - key: name
          operator: Exists
      podSelector:
        matchLabels: {}
  - ports:
    - port: http
    to:
    - namespaceSelector:
        matchExpressions:
        - key: name
          operator: Exists
      podSelector:
        matchLabels:
          acme.cert-manager.io/http01-solver: "true"
